--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -70,9 +70,9 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         <dd><a href="/san/doc/api/">API</a></dd>
 
         <dt>示例</dt>
-        <dd><a href="#" target="_blank">一些小示例</a></dd>
-        <dd><a href="#" target="_blank">Todos(AMD)</a></dd>
-        <dd><a href="#" target="_blank">Todos(ES6)</a></dd>
+        <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
+        <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-amd" target="_blank">Todos (AMD)</a></dd>
+        <dd><a target="_blank">Todos (ES6) - coming soon</a></dd>
     </dl>
 </aside>
 <article id="post-form" class="article article-type-post" itemscope itemprop="blogPost">
