--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -43,7 +43,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
             <li><a href="/san/tutorial/start/">教程</a>
             <li><a href="/san/example/">示例</a>
             <li><a href="/san/doc/api/">API</a>
-            <li><a href="https://github.com/ecomfe/san-core" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <li><a href="https://github.com/ecomfe/san" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </ul>
     </nav>
 </header>
