--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -46,7 +46,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
             <li><a href="/san/tutorial/start/">教程</a>
             <li><a href="/san/example/">示例</a>
             <li><a href="/san/doc/api/">API</a>
-            <li><a href="https://github.com/ecomfe/san-core" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <li><a href="https://github.com/ecomfe/san" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </ul>
     </nav>
 </header>
