--- a/tutorial/if/index.html
+++ b/tutorial/if/index.html
@@ -49,7 +49,7 @@ san-if 指令的值可以是任何类型的表达式。
             <li><a href="/san/tutorial/start/">教程</a>
             <li><a href="/san/example/">示例</a>
             <li><a href="/san/doc/api/">API</a>
-            <li><a href="https://github.com/ecomfe/san-core" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <li><a href="https://github.com/ecomfe/san" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </ul>
     </nav>
 </header>
