--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -43,7 +43,7 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
             <li><a href="/san/tutorial/start/">教程</a>
             <li><a href="/san/example/">示例</a>
             <li><a href="/san/doc/api/">API</a>
-            <li><a href="https://github.com/ecomfe/san-core" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <li><a href="https://github.com/ecomfe/san" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </ul>
     </nav>
 </header>
