--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -43,7 +43,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
             <li><a href="/san/tutorial/start/">教程</a>
             <li><a href="/san/example/">示例</a>
             <li><a href="/san/doc/api/">API</a>
-            <li><a href="https://github.com/ecomfe/san-core" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <li><a href="https://github.com/ecomfe/san" class="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         </ul>
     </nav>
 </header>
