deploy san website

--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -36,7 +36,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
 
 <body>
   <header>
-    
+    <a href="/san/" class="logo-s-link"><img width="46" height="50" src="/san/img/logo-s.png" class="logo-s" alt="LOGO" title="San"></a>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
