--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -36,7 +36,7 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
 
 <body>
   <header>
-    
+    <a href="/san/" class="logo-s-link"><img width="46" height="50" src="/san/img/logo-s.png" class="logo-s" alt="LOGO" title="San"></a>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
