--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -36,7 +36,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
 
 <body>
   <header>
-    
+    <a href="/san/" class="logo-s-link"><img width="46" height="50" src="/san/img/logo-s.png" class="logo-s" alt="LOGO" title="San"></a>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
