deploy san website

--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -39,7 +39,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img width="46" height="50" src="/san/img/logo-s.png" class="logo-s" alt="LOGO" title="San"></a>
+    <a href="/san/" class="logo-s-link"><img height="66" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
