--- a/tutorial/if/index.html
+++ b/tutorial/if/index.html
@@ -42,7 +42,7 @@ san-if 指令的值可以是任何类型的表达式。
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img width="46" height="50" src="/san/img/logo-s.png" class="logo-s" alt="LOGO" title="San"></a>
+    <a href="/san/" class="logo-s-link"><img height="66" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
