--- a/tutorial/if/index.html
+++ b/tutorial/if/index.html
@@ -137,7 +137,7 @@ san-if 指令的值可以是任何类型的表达式。
 </section>
 <footer>
     <div class="efe-products">
-        <p>开源的 FECS 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们还有其他开源产品：</p>
+        <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们还有其他开源产品：</p>
         <dl>
             <dt><a target="_blank" href="http://echarts.baidu.com/">ECharts</a></dt>
             <dd>直观，生动，可交互，可高度个性化定制的数据可视化图表。</dd>
