--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -135,7 +135,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
 </section>
 <footer>
     <div class="efe-products">
-        <p>开源的 FECS 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们还有其他开源产品：</p>
+        <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们还有其他开源产品：</p>
         <dl>
             <dt><a target="_blank" href="http://echarts.baidu.com/">ECharts</a></dt>
             <dd>直观，生动，可交互，可高度个性化定制的数据可视化图表。</dd>
