deploy san website

--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -40,6 +40,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
 <body>
   <header>
     <a href="/san/" class="logo-s-link"><img height="90" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
+    <b>San</b>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
