--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -37,6 +37,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
 <body>
   <header>
     <a href="/san/" class="logo-s-link"><img height="90" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
+    <b>San</b>
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
