--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -118,19 +118,19 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
     <div class="resource-row">
         <a class="resource-item" href="/san/tutorial/start/">
             <h5>教程</h5>
-            <p>教程是入门的捷径，请从这里开始了解SAN。</p>
+            <p>教程是入门的捷径，请从这里开始了解San。</p>
         </a>
         <a class="resource-item resource-item-unready">
             <h5>指南</h5>
-            <p>我们正在编写指南手册，以指导各种应用场景下怎么使用SAN。</p>
+            <p>我们正在编写指南手册，以指导各种应用场景下怎么使用San。</p>
         </a>
         <a class="resource-item" href="/san/example/">
             <h5>示例</h5>
-            <p>这里展示了如何使用SAN完成一个实际的项目。</p>
+            <p>这里展示了如何使用San完成一个实际的项目。</p>
         </a>
         <a class="resource-item" href="/san/doc/api/">
             <h5>API</h5>
-            <p>当你想不起来SAN提供的接口时，请查阅这里。</p>
+            <p>当你想不起来San提供的接口时，请查阅这里。</p>
         </a>
     </div>
 </section>
