--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="/san/img/favicon.ico" type="image/x-icon" />
   
   <title>San</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -48,8 +49,8 @@
     <dd>一个 Todos 应用的例子，包含列表、列表内操作、表单提交、浮出层、交互组件等应用开发中常见的场景。</dd>
 
 
-    <dt><a href="#" target="_blank">Todos (ESNext)</a></dt>
-    <dd>我们正在编写上面例子的 ESNext 版本。其使用了webpack + babel，更符合流行的应用开发习惯。</dd>
+    <dt><a href="https://github.com/ecomfe/san/tree/master/example/todos-esnext" target="_blank">Todos (ESNext)</a></dt>
+    <dd>上面 Todos 应用的 ESNext 版本。其使用了webpack + babel，更符合流行的应用开发习惯。</dd>
 </dl>
   <section class="resource">
     <h4><b>RESOURCES</b></h4>
