--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="/san/img/favicon.ico" type="image/x-icon" />
   
   <title>事件处理 | San</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -70,7 +71,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
         <dt>示例</dt>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-amd" target="_blank">Todos (AMD)</a></dd>
-        <dd><a target="_blank">Todos (ES6) - coming soon</a></dd>
+        <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-esnext" target="_blank">Todos (ESNext)</a></dd>
     </dl>
 </aside>
 <article id="post-event" class="article article-type-post" itemscope itemprop="blogPost">
