--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -143,7 +143,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
         <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
         <script>
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', 'http://ecomfe.github.io/efe-meta/html/full-intro.html', true);
+        xhr.open('GET', '/efe-meta/html/full-intro.html', true);
         xhr.send();
         xhr.onreadystatechange = function() {
             if (xhr.readyState === 4 && xhr.status === 200) {
