--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -150,7 +150,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
         <script>
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', 'http://ecomfe.github.io/efe-meta/html/full-intro.html', true);
+        xhr.open('GET', '/efe-meta/html/full-intro.html', true);
         xhr.send();
         xhr.onreadystatechange = function() {
             if (xhr.readyState === 4 && xhr.status === 200) {
