deploy san website

--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -71,6 +71,8 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
         
         <dt>周边</dt>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store" target="_blank">san-store</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-update" target="_blank">san-update</a></dd>
 
         <dt>示例</dt>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
