--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -71,6 +71,8 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
         
         <dt>周边</dt>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store" target="_blank">san-store</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-update" target="_blank">san-update</a></dd>
 
         <dt>示例</dt>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
