--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -74,6 +74,8 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         
         <dt>周边</dt>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store" target="_blank">san-store</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-update" target="_blank">san-update</a></dd>
 
         <dt>示例</dt>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
