--- a/tutorial/if/index.html
+++ b/tutorial/if/index.html
@@ -77,6 +77,8 @@ san-if 指令的值可以是任何类型的表达式。
         
         <dt>周边</dt>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store" target="_blank">san-store</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-update" target="_blank">san-update</a></dd>
 
         <dt>示例</dt>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
