deploy san website

--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -40,8 +40,8 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
-    <b>San</b>
+    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"><b>San</b></a>
+    
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
