--- a/tutorial/data-method/index.html
+++ b/tutorial/data-method/index.html
@@ -37,8 +37,8 @@
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
-    <b>San</b>
+    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"><b>San</b></a>
+    
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
