--- a/tutorial/if/index.html
+++ b/tutorial/if/index.html
@@ -43,8 +43,8 @@ san-if 指令的值可以是任何类型的表达式。
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
-    <b>San</b>
+    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"><b>San</b></a>
+    
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
