--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -37,8 +37,8 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
 
 <body>
   <header>
-    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"></a>
-    <b>San</b>
+    <a href="/san/" class="logo-s-link"><img height="80" src="/san/img/logo.svg" class="logo-s" alt="LOGO" title="San"><b>San</b></a>
+    
     <nav>
         <ul>
             <li><a href="/san/">HOME</a>
