--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -78,6 +78,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-amd" target="_blank">Todos (AMD)</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-esnext" target="_blank">Todos (ESNext)</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store/tree/master/example/todos" target="_blank">Todos (单向流)</a></dd>
     </dl>
 </aside>
 <article id="post-event" class="article article-type-post" itemscope itemprop="blogPost">
