--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -81,6 +81,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-amd" target="_blank">Todos (AMD)</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-esnext" target="_blank">Todos (ESNext)</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store/tree/master/example/todos" target="_blank">Todos (单向流)</a></dd>
     </dl>
 </aside>
 <article id="post-form" class="article article-type-post" itemscope itemprop="blogPost">
