--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -78,6 +78,7 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/start" target="_blank">一些小示例</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-amd" target="_blank">Todos (AMD)</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/example/todos-esnext" target="_blank">Todos (ESNext)</a></dd>
+        <dd><a href="https://github.com/ecomfe/san-store/tree/master/example/todos" target="_blank">Todos (单向流)</a></dd>
     </dl>
 </aside>
 <article id="post-start" class="article article-type-post" itemscope itemprop="blogPost">
