--- a/tutorial/for/index.html
+++ b/tutorial/for/index.html
@@ -36,6 +36,16 @@
   <link rel="stylesheet" href="/san/css/style.css">
   <link rel="stylesheet" href="/san/css/article.css">
   <link rel="stylesheet" href="/san/css/code.css">
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?fe8285f51c25503f85b1082c854a41e0";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+
 </head>
 
 <body>
