--- a/tutorial/data-binding/index.html
+++ b/tutorial/data-binding/index.html
@@ -179,15 +179,15 @@
 
     <div class="facility-row">
         <a class="facility-item" href="https://github.com/ecomfe/san-router" target="_blank">
-            <h5>san-router</h5>
+            <h5>Router</h5>
             <p>支持hash和html5模式的router，单页或同构的Web应用通常需要它。</p>
         </a>
         <a class="facility-item" href="https://github.com/ecomfe/san-store" target="_blank">
-            <h5>san-store</h5>
+            <h5>Store</h5>
             <p>应用状态管理套件，其理念是类似flux的单向流。</p>
         </a>
         <a class="facility-item" href="https://github.com/ecomfe/san-update" target="_blank">
-            <h5>san-update</h5>
+            <h5>Update</h5>
             <p>Immutable的对象更新库，和san-store配合进行应用状态数据更新。</p>
         </a>
         <a class="facility-item facility-item-unready">
