--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -157,15 +157,15 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
 
     <div class="facility-row">
         <a class="facility-item" href="https://github.com/ecomfe/san-router" target="_blank">
-            <h5>san-router</h5>
+            <h5>Router</h5>
             <p>支持hash和html5模式的router，单页或同构的Web应用通常需要它。</p>
         </a>
         <a class="facility-item" href="https://github.com/ecomfe/san-store" target="_blank">
-            <h5>san-store</h5>
+            <h5>Store</h5>
             <p>应用状态管理套件，其理念是类似flux的单向流。</p>
         </a>
         <a class="facility-item" href="https://github.com/ecomfe/san-update" target="_blank">
-            <h5>san-update</h5>
+            <h5>Update</h5>
             <p>Immutable的对象更新库，和san-store配合进行应用状态数据更新。</p>
         </a>
         <a class="facility-item facility-item-unready">
