--- a/example/index.html
+++ b/example/index.html
@@ -65,6 +65,13 @@
 
     <dt><a href="https://github.com/ecomfe/san-store/tree/master/example/todos" target="_blank">Todos (单向流)</a></dt>
     <dd>上面 Todos 应用的单向流版本。其使用了 san-store。</dd>
+
+    <dt>在线用法小示例</dt>
+    <dd><p data-height="265" data-theme-id="dark" data-slug-hash="rmGygP" data-default-tab="result" data-user="errorrik" data-embed-version="2" data-pen-title="san-bindx" class="codepen">See the Pen <a href="https://codepen.io/errorrik/pen/rmGygP/">san-bindx</a> by errorrik (<a href="http://codepen.io/errorrik">@errorrik</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+    </dd>
+    <dd><p data-height="265" data-theme-id="dark" data-slug-hash="aWLyZa" data-default-tab="result" data-user="errorrik" data-embed-version="2" data-pen-title="san-list" class="codepen">See the Pen <a href="https://codepen.io/errorrik/pen/aWLyZa/">san-list</a> by errorrik (<a href="http://codepen.io/errorrik">@errorrik</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script></dd>
 </dl>
   <section class="resource">
     <h4><b>RESOURCES</b></h4>
