deploy san website

--- a/tutorial/data-binding/index.html
+++ b/tutorial/data-binding/index.html
@@ -79,7 +79,7 @@
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
-        <dd><a href="/san/tutorial/from-element/">组件反解</a></dd>
+        <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">API DOC</a></dd>
