--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -76,7 +76,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
-        <dd><a href="/san/tutorial/from-element/">组件反解</a></dd>
+        <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">API DOC</a></dd>
