--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -178,7 +178,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
 </section>
 <footer>
     <div class="efe-products" id="links">
-        <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
+        <p><i class="fa fa-info-circle"></i> 开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
         <script>
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/efe-meta/html/full-intro.html', true);
