--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -183,7 +183,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
 </section>
 <footer>
     <div class="efe-products" id="links">
-        <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
+        <p><i class="fa fa-info-circle"></i> 开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
         <script>
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/efe-meta/html/full-intro.html', true);
