--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -177,7 +177,7 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
 </section>
 <footer>
     <div class="efe-products" id="links">
-        <p>开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
+        <p><i class="fa fa-info-circle"></i> 开源的 San 来自百度 EFE。在 <a target="_blank" href="http://efe.baidu.com">EFE</a>，我们有一系列开源产品：</p>
         <script>
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/efe-meta/html/full-intro.html', true);
