--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -77,12 +77,14 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
+        <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
 
         <dt>了解更多</dt>
-        <dd><a href="/san/doc/api/">API DOC</a></dd>
+        <dd><a href="/san/doc/api/">组件 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         
         <dt>周边</dt>
+        <dd><a href="https://ecomfe.github.io/san-mui/" target="_blank">san-mui</a></dd>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
         <dd><a href="https://github.com/ecomfe/san-store" target="_blank">san-store</a></dd>
         <dd><a href="https://github.com/ecomfe/san-update" target="_blank">san-update</a></dd>
@@ -154,8 +156,8 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
             <p>这里展示了一些简单例子，以及在实际项目如何使用San。</p>
         </a>
         <a class="resource-item" href="/san/doc/api/">
-            <h5>API</h5>
-            <p>当你想不起来San提供的接口时，请查阅这里。</p>
+            <h5>组件 API</h5>
+            <p>当你想不起来组件的接口时，请查阅这里。</p>
         </a>
     </div>
 </section>
