--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -78,6 +78,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">组件 API</a></dd>
+        <dd><a href="/san/doc/main-members/">主模块 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         
         <dt>周边</dt>
