--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -81,6 +81,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">组件 API</a></dd>
+        <dd><a href="/san/doc/main-members/">主模块 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         
         <dt>周边</dt>
