--- a/tutorial/ssr/index.html
+++ b/tutorial/ssr/index.html
@@ -90,6 +90,7 @@
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">组件 API</a></dd>
+        <dd><a href="/san/doc/main-members/">主模块 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         
         <dt>周边</dt>
