--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -78,6 +78,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
 
         <dt>了解更多</dt>
         <dd><a href="/san/doc/api/">组件 API</a></dd>
+        <dd><a href="/san/doc/main-members/">主模块 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         
         <dt>周边</dt>
