--- a/tutorial/data-method/index.html
+++ b/tutorial/data-method/index.html
@@ -67,6 +67,7 @@
         <dd><a href="/san/tutorial/start/">开始</a></dd>
         <dd><a href="/san/tutorial/data-binding/">数据绑定</a></dd>
         <dd><a href="/san/tutorial/data-method/">数据操作</a></dd>
+        <dd><a href="/san/tutorial/data-checking/">数据校验</a></dd>
         <dd><a href="/san/tutorial/style/">样式</a></dd>
         <dd><a href="/san/tutorial/if/">分支</a></dd>
         <dd><a href="/san/tutorial/for/">循环</a></dd>
@@ -81,7 +82,7 @@
         <dd><a href="/san/doc/main-members/">主模块 API</a></dd>
         <dd><a href="https://github.com/ecomfe/san/blob/master/doc/anode.md" target="_blank">ANode DOC</a></dd>
         <dd><a href="https://github.com/ecomfe/san/tree/master/dist" target="_blank">发布版本说明</a></dd>
-        
+
         <dt>周边</dt>
         <dd><a href="https://ecomfe.github.io/san-mui/" target="_blank">san-mui</a></dd>
         <dd><a href="https://github.com/ecomfe/san-router" target="_blank">san-router</a></dd>
@@ -95,6 +96,7 @@
         <dd><a href="https://github.com/ecomfe/san-store/tree/master/example/todos" target="_blank">Todos (单向流)</a></dd>
     </dl>
 </aside>
+
 <article id="post-data-method" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
