deploy san website

--- a/tutorial/data-checking/index.html
+++ b/tutorial/data-checking/index.html
@@ -97,7 +97,7 @@
     </dl>
 </aside>
 
-<article id="post-data-checking" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/data-checking" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
