--- a/tutorial/event/index.html
+++ b/tutorial/event/index.html
@@ -97,7 +97,7 @@ DOM 事件on- + 事件名 将 DOM 元素的事件绑定到组件方法上。当 
     </dl>
 </aside>
 
-<article id="post-event" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/event" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
