--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -100,7 +100,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中，我们把
     </dl>
 </aside>
 
-<article id="post-form" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/form" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
