--- a/tutorial/ssr/index.html
+++ b/tutorial/ssr/index.html
@@ -109,7 +109,7 @@
     </dl>
 </aside>
 
-<article id="post-ssr" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/ssr" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
