--- a/tutorial/start/index.html
+++ b/tutorial/start/index.html
@@ -97,7 +97,7 @@ Hello12345678910111213var MyApp = san.defineComponent(&amp;#123;    template: &a
     </dl>
 </aside>
 
-<article id="post-start" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/start" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
