--- a/tutorial/style/index.html
+++ b/tutorial/style/index.html
@@ -97,7 +97,7 @@ class我们可能会设计一些用于表示状态的 class，这些 cl">
     </dl>
 </aside>
 
-<article id="post-style" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/style" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
