--- a/tutorial/data-binding/index.html
+++ b/tutorial/data-binding/index.html
@@ -103,7 +103,7 @@
     </dl>
 </aside>
 
-<article id="post-data-binding" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/data-binding" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
