--- a/tutorial/data-method/index.html
+++ b/tutorial/data-method/index.html
@@ -97,7 +97,7 @@
     </dl>
 </aside>
 
-<article id="post-data-method" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/data-method" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
