--- a/tutorial/for/index.html
+++ b/tutorial/for/index.html
@@ -103,7 +103,7 @@
     </dl>
 </aside>
 
-<article id="post-for" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/for" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
