--- a/tutorial/reverse/index.html
+++ b/tutorial/reverse/index.html
@@ -97,7 +97,7 @@
     </dl>
 </aside>
 
-<article id="post-reverse" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/reverse" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
