--- a/tutorial/setup/index.html
+++ b/tutorial/setup/index.html
@@ -109,7 +109,7 @@ CDN通过 unpkg，你可以无需下载，直接引用。
     </dl>
 </aside>
 
-<article id="post-setup" class="article article-type-post" itemscope itemprop="blogPost">
+<article id="post-tutorial/setup" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
     
     
