--- a/tutorial/data-checking/index.html
+++ b/tutorial/data-checking/index.html
@@ -114,7 +114,7 @@
         <dd><a href="/san/tutorial/data-method/">数据操作</a></dd>
         <dd><a href="/san/tutorial/data-checking/">数据校验</a></dd>
         <dd><a href="/san/tutorial/style/">样式</a></dd>
-        <dd><a href="/san/tutorial/if/">分支</a></dd>
+        <dd><a href="/san/tutorial/if/">条件</a></dd>
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
@@ -206,7 +206,7 @@
         <dd><a href="/san/tutorial/data-method/">数据操作</a></dd>
         <dd><a href="/san/tutorial/data-checking/">数据校验</a></dd>
         <dd><a href="/san/tutorial/style/">样式</a></dd>
-        <dd><a href="/san/tutorial/if/">分支</a></dd>
+        <dd><a href="/san/tutorial/if/">条件</a></dd>
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
