--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -117,7 +117,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中">
         <dd><a href="/san/tutorial/data-method/">数据操作</a></dd>
         <dd><a href="/san/tutorial/data-checking/">数据校验</a></dd>
         <dd><a href="/san/tutorial/style/">样式</a></dd>
-        <dd><a href="/san/tutorial/if/">分支</a></dd>
+        <dd><a href="/san/tutorial/if/">条件</a></dd>
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
@@ -218,7 +218,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中">
         <dd><a href="/san/tutorial/data-method/">数据操作</a></dd>
         <dd><a href="/san/tutorial/data-checking/">数据校验</a></dd>
         <dd><a href="/san/tutorial/style/">样式</a></dd>
-        <dd><a href="/san/tutorial/if/">分支</a></dd>
+        <dd><a href="/san/tutorial/if/">条件</a></dd>
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
