deploy san website

--- a/tutorial/data-method/index.html
+++ b/tutorial/data-method/index.html
@@ -118,6 +118,7 @@
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
+        <dd><a href="/san/tutorial/slot/">插槽</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
@@ -225,6 +226,7 @@
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
+        <dd><a href="/san/tutorial/slot/">插槽</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
