--- a/tutorial/form/index.html
+++ b/tutorial/form/index.html
@@ -121,6 +121,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中">
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
+        <dd><a href="/san/tutorial/slot/">插槽</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
@@ -222,6 +223,7 @@ checkboxcheckbox 常见的使用场景是分组，在组件模板中">
         <dd><a href="/san/tutorial/for/">循环</a></dd>
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
+        <dd><a href="/san/tutorial/slot/">插槽</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
