deploy san website

--- a/tutorial/setup/index.html
+++ b/tutorial/setup/index.html
@@ -131,6 +131,7 @@ CDN通过 unpkg，你可以无需下载，直接引用。
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/slot/">插槽</a></dd>
+        <dd><a href="/san/tutorial/transition/">过渡</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
@@ -254,6 +255,7 @@ CDN通过 unpkg，你可以无需下载，直接引用。
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/slot/">插槽</a></dd>
+        <dd><a href="/san/tutorial/transition/">过渡</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
