--- a/practice/san-store-spa/index.html
+++ b/practice/san-store-spa/index.html
@@ -122,6 +122,7 @@
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/slot/">插槽</a></dd>
+        <dd><a href="/san/tutorial/transition/">过渡</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
@@ -246,6 +247,7 @@
         <dd><a href="/san/tutorial/event/">事件处理</a></dd>
         <dd><a href="/san/tutorial/form/">表单</a></dd>
         <dd><a href="/san/tutorial/slot/">插槽</a></dd>
+        <dd><a href="/san/tutorial/transition/">过渡</a></dd>
         <dd><a href="/san/tutorial/component/">组件</a></dd>
         <dd><a href="/san/tutorial/reverse/">组件反解</a></dd>
         <dd><a href="/san/tutorial/ssr/">服务端渲染</a></dd>
